# wissenschaftliches-rechnen

./: CMakeLists.txt  README.md
blatt01/: CMakeLists.txt
blatt01/aufgabe01/: CMakeLists.txt  Faculty.cpp  Faculty.h
blatt01/aufgabe02/: CMakeLists.txt  LeapYear.cpp  LeapYear.h
blatt02/: CMakeLists.txt  Rational.cpp  Rational.h
blatt03/: CMakeLists.txt  fragebogen.md
blatt03/aufgabe04/: CMakeLists.txt  List.cpp  List.h  Main.cpp  Node.cpp  Node.h
blatt04/: fragebogen.md
blatt05/: CMakeLists.txt  fragebogen.md
blatt05/aufgabe01/: CMakeLists.txt  Empty.cpp  Main.cpp
blatt05/aufgabe02/: CMakeLists.txt  NumVector.cpp  NumVectorComposite.cpp  NumVectorDerived.cpp  test1.cpp  test2.cpp  testComposite1.cpp  testComposite2.cpp  testDerived1.cpp  testDerived2.cpp
blatt05/aufgabe03/: CMakeLists.txt  aufgabe03.cpp
blatt05/aufgabe04/: CMakeLists.txt  aufgabe04.cpp
blatt05/aufgabe05/: CMakeLists.txt  NumVectorDerived.cpp
blatt06/: CMakeLists.txt  UML.drawio
blatt06/aufgabe01/: CMakeLists.txt  blatt06-aufgabe01.cpp
blatt06/aufgabe02/: CMakeLists.txt  Interpolation.h  Newton.cpp  Newton.h
blatt07/: CMakeLists.txt  exceptions.cpp  matrix_double.cpp  matrix_double.h  test_matrix_double.cpp
blatt08/: CMakeLists.txt  MatrixClass.h  NumMatrixClass.h  fragebogen.md  test_matrix_double.cpp
blatt09/: CMakeLists.txt
blatt09/aufgabe01/: CMakeLists.txt  MatrixClass.h  NumMatrixClass.h  exceptions.cpp  test_matrix_double.cpp
blatt10/: CMakeLists.txt  fragebogen.md
exam-preparation/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.h
(+4 files in other folders)
