cmake_minimum_required(VERSION 3.12)
project(wissenschaftliches-rechnen)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic -Werror")
add_subdirectory(blatt01)
add_subdirectory(blatt02)
add_subdirectory(blatt03)
add_subdirectory(blatt05)
add_subdirectory(blatt06)
add_subdirectory(blatt07)
add_subdirectory(blatt08)
add_subdirectory(blatt09)
add_subdirectory(blatt10)
