project(blatt05-aufgabe02)

add_executable(blatt05-aufgabe2-testDerived1 testDerived1.cpp NumVectorDerived.cpp)
add_executable(blatt05-aufgabe2-testDerived2 testDerived2.cpp NumVectorDerived.cpp)
add_executable(blatt05-aufgabe2-testComposite1 testComposite1.cpp NumVectorComposite.cpp)
add_executable(blatt05-aufgabe2-testComposite2 testComposite2.cpp NumVectorComposite.cpp)